added https capability

--- a/php-test-app.yaml
+++ b/php-test-app.yaml
@@ -169,4 +169,7 @@ spec:
   port:
     targetPort: 8080-tcp
   wildcardPolicy: None
+  tls:
+    termination: Edge
+    insecureEdgeTerminationPolicy: Redirect # Redirects HTTP traffic to HTTPS
 ...
